<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

	<Button
        android:id="@+id/button_dish"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/button_dish">       
    </Button>



    <Button
        android:id="@+id/btn_mmt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="43dp"
        android:text="@string/goto_moment" />
    
    <Button
        android:id="@+id/btn_dt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/btn_mmt"
        android:layout_marginTop="43dp"
        android:text="@string/goto_date" />
    
    <Button
        android:id="@+id/btn_nfctag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/btn_dt"
        android:layout_marginTop="43dp"
        android:text="@string/goto_scantag" />

</LinearLayout>

