<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#eeeeee"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/img_item_userphoto"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:layout_weight="2"
        android:src="@drawable/ic_launcher" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="7"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <!-- username -->
            <TextView
                android:id="@+id/tv_item_uname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userName"
                android:textColor="#424d54"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!-- content -->

            <TextView
                android:id="@+id/txt_item_content"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/content"
                android:textColor="#424d54"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="vertical" >

            <!-- time -->
            <TextView
                android:id="@+id/txt_item_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fakeTime"
                android:textColor="#efa608"
                android:textSize="13sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>