<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="310dp"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!-- username -->

            <TextView
                android:id="@+id/txt_item_accept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userName"
                android:textColor="#000066"
                android:textSize="15sp"
                android:layout_margin="5dp"/>
            
            <TextView
                android:id="@+id/txt_item_refuse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userName"
                android:textColor="#000066"
                android:textSize="15sp"
                android:layout_margin="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!-- friend -->
            <TextView
                android:id="@+id/txt_item_friend"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/content"
                android:textColor="#090909"
                android:textSize="15sp"
                android:layout_marginLeft="5dp" />
            
            <!-- time -->
            <TextView
                android:id="@+id/txt_item_time"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/content"
                android:textColor="#090909"
                android:textSize="15sp"
                android:layout_marginLeft="5dp" />
            
            <!-- address -->
            <TextView
                android:id="@+id/txt_item_content"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/content"
                android:textColor="#090909"
                android:textSize="15sp"
                android:layout_marginLeft="5dp" />

        </LinearLayout>

        <!-- date info  -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:orientation="horizontal" >

            <!-- logtime -->
            <TextView
                android:id="@+id/txt_item_logtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fakeTime"
                android:textColor="#efa608"
                android:textSize="14sp" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>