<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="310dp"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/img_item_userphoto"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:src="@drawable/icon_avatar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <!-- username -->

            <TextView
                android:id="@+id/txt_item_uname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userName"
                android:textColor="#000066"
                android:textSize="15sp"
                android:layout_margin="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!-- friend -->
            <TextView
                android:id="@+id/txt_item_friend"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/content"
                android:textColor="#090909"
                android:textSize="15sp"
                android:layout_marginLeft="5dp" />
            
            <!-- time -->
            <TextView
                android:id="@+id/txt_item_time"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/content"
                android:textColor="#090909"
                android:textSize="15sp"
                android:layout_marginLeft="5dp" />
            
            <!-- address -->
            <TextView
                android:id="@+id/txt_item_content"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/content"
                android:textColor="#090909"
                android:textSize="15sp"
                android:layout_marginLeft="5dp" />

            <!-- specific width or height for different img -->
            <!-- <ImageView
                android:id="@+id/img_item_content_pic"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="fitStart"
                android:layout_margin="5dp"
                android:src="@drawable/ic_launcher" /> -->
        </LinearLayout>

        <!-- date info  -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:orientation="horizontal" >

            <!-- logtime -->
            <TextView
                android:id="@+id/txt_item_logtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fakeTime"
                android:textColor="#efa608"
                android:textSize="14sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal" >

                <!-- <ImageButton
                    android:id="@+id/imgBtn_comment"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:scaleType="fitCenter"
                    android:layout_marginRight="5dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/icon_comment" /> -->
                   
                <Button
                	android:id="@+id/btn_accept"
                	android:layout_width="wrap_content"
                	android:layout_height="wrap_content"
                	android:gravity="center_vertical"
                	android:text="accept" />
                
                <Button
                	android:id="@+id/btn_refuse"
                	android:layout_width="wrap_content"
                	android:layout_height="wrap_content"
                	android:gravity="center_vertical"
                	android:text="refuse" />


            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>